--- a/Simulation-Report.ipynb
+++ b/Simulation-Report.ipynb
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "161df3f7",
+   "id": "dcd19dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
    "id": "4f7b2e43",
    "metadata": {},
    "source": [
-    "__Inference:__ _As packet size increases(with fixed data rate), it takes longer time to transmit data._"
+    "__Inference:__ _As packet size increases(with fixed data rate), it takes longer time to transmit data. because the transfering protocol (here UDP) should break down the packet to a specific size of segments (MSS) and then transfer these segments._"
    ]
   },
   {
